test/spec_vectors/if/fail/module_25.wat
(module (func $type-then-value-nums-vs-void (if (i32.const 1) (then (i32.const 1) (i32.const 2)))))